kf-on-prem/kustomize/overlays/default/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http-kubeflow
        protocol: HTTP
      hosts:
        - kubeflow.k8s.tidu.giize.com
        - kubeflow-api.k8s.tidu.giize.com
